# music_experiment

./: .gitignore  CMakeLists.txt  README.md  execute.sh
include/: Bass.hpp  Guitar.hpp  Human.hpp  Instrument.hpp  Metronome.hpp  Musician.hpp  Utils.hpp
src/: Metronome.cpp  Musician.cpp  main.cpp
